# Proiect-SD

./: CMakeLists.txt  README.md  main.cpp  sorts.h  test_case_generator.cpp
Quicksort, Insertsort, Patience sorting/: Tabel timpi.xlsx  insertionsort.cpp  patiencesort.cpp  quicksort.cpp
Quicksort, Insertsort, Patience sorting/generators/: custom_tests_generator.cpp  generator.cpp  generator_special.cpp
Quicksort, Insertsort, Patience sorting/tests/: blocks_small_snc_07.in  freq_small_snc_06.in  random_small_snc_05.in
bubble/: bubblesort_Artemia.cpp
bubble/test1/: big_Artemia_01.in  big_Artemia_01.ok  description
bubble/test2/: big_Artemia_02.in  description
bubble/test3/: big_Artemia_03.in  description
gnome/: gnome_sort.cpp  small_gnome_sort_worst.in
heap/: heap_sort.cpp  heapsort_Artemia.cpp
heap/test01/: description
heap/test02/: description
heap/test03/: description
intro/: introsort_Artemia.cpp
intro/test01/: description
intro/test02/: description
intro/test03/: description
merge/: merge_sort.cpp  small_merge_sort_worst.in
radix/: radix_sort.cpp  small_radix_sort_best.in  small_radix_sort_worst.in
